--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     </header>
     <main>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates voluptatibus libero quis quisquam quibusdam iste soluta asperiores sed commodi ad! Aspernatur asperiores repellat alias placeat assumenda, quisquam id sapiente eveniet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, veniam nihil temporibus facilis illum saepe quae modi eum, molestiae debitis aliquid est praesentium officia, excepturi nobis mollitia dolorum officiis. Voluptas.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates voluptatibus libero quis quisquam quibusdam iste soluta asperiores sed commodi ad! Aspernatur asperiores repellat alias placeat assumenda, quisquam id sapiente eveniet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, veniam nihil temporibus facilis illum saepe quae modi eum, molestiae debitis aliquid est praesentium officia, excepturi nobis mollitia dolorum officiis. 
     </main>
     
 </body>
