--- a/index.html
+++ b/index.html
@@ -3,29 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jogos2D</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="all.min.css">
-    
+    <title>nerdflix</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="imagens/controle-de-video-game.png">
 </head>
 <body>
     <header class="header">
         <a href="index.html" title="pagina inicial" class="header-logo"> 
-            <img src="imagem/jogos 2D.png" alt="jogos 2D">
+            <img src="imagens/Pixelmania.png" alt="nerdflix">
         </a>
         <nav class="header-nav">
             <ul>'
-                <li><a href="index.html"title='home'><strong>Home</strong></a></li>
-                <li><a href="filmes.html"title='filmes'><strong>Jogos</strong></a></li>
-                <li><a href="series.html"title='series'><strong>Sobre</strong></a></li>
+                <li><a href="index.html"title='home'>home</a></li>
+                <li><a href="sobre.html"title='sobre'>sobre</a></li>
+                <li><a href="contato.html"title='contatos'>contato</a></li>
             </ul>
 
         </nav>
 
     </header>
-    <main>
-        Lorem ipsum dolor sit amet consectetur adipisicingfhg elit. Voluptates voluptatibus libero quis quisquam quibusdam iste soluta asperiores sed commodi ad! Aspernatur asperiores repellat alias placeat assumenda, quisquam id sapiente eveniet. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, veniam nihil temporibus facilis illum saepe quae modi eum, molestiae debitis aliquid est praesentium officia, excepturi nobis mollitia dolorum officiis. 
+    <section class="banner">
+        <img src="" alt=""class='banner-img'>
+    </section>
+    <main class="container">
+        <h1>Filmes em destaques</h1>
+        <div class="flex">
+            <div class="flex-card">
+                <img src="imagens/imagem3.jpg" alt="deadpoll 3"class='flex-img'>
+                <p>
+                    <strong>jogos</strong>
+                </p>
+                <p>
+                    <a href="detalhes.html" title="detalhes" class="btn">
+                        detalhes
+                    </a>
+                </p>
+
+            </div>
+            <div class="flex-card">
+                <img src="imagens/imagem1.jpg" alt="madame teia"class='flex-img'>
+                <p>
+                    <strong>jogos 2</strong>
+                </p>
+                <p>
+                    <a href="detalhes.html" title="detalhes" class="btn">
+                        detalhes
+                    </a>
+                </p>
+
+            </div>
+            <div class="flex-card">
+                <img src="imagens/imagem2.jpg" alt="flash"class='flex-img'>
+                <p>
+                    <strong>jogos 3</strong>
+                </p>
+                <p>
+                    <a href="detalhes.html" title="detalhes" class="btn">
+                        detalhes
+                    </a>
+                </p>
+
+            </div>
+            <div class="flex-card">
+                <img src="imagens/imagem3.jpg" alt="aquaman"class='flex-img'>
+                <p>
+                    <strong>jogos 4</strong>
+                </p>
+                <p>
+                    <a href="detalhes.html" title="detalhes" class="btn">
+                        detalhes
+                    </a>
+                </p>
+
+            </div>
+            <div class="flex-card">
+                <img src="imagens/imagem4.jpg" alt="sonic 2"class='flex-img'>
+                <p>
+                    <strong>jogos 5</strong>
+                </p>
+                <p>
+                    <a href="detalhes.html" title="detalhes" class="btn">
+                        detalhes
+                    </a>
+                </p>
+
+            </div>
+            <div class="flex-card">
+                <img src="imagens/imagem1.jpg" alt="gran turismo6"class='flex-img'>
+                <p>
+                    <strong>jogos 6</strong>
+                </p>
+                <p>
+                    <a href="detalhes.html" title="detalhes" class="btn">
+                        detalhes
+                    </a>
+                </p>
+
+            </div>
+
+        </div>
+
     </main>
+    <footer class='footer-img'>
+        <img src="imagens/Pixelmania.png" alt="nerdflix">
+        <p>Av.irmão Pereira 670 - Campo Mourão - PR</p>
+    </footer>
     
 </body>
 </html>
