adicionando jogos e @midia

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             <div class="flex-card">
                 <img src="imagens/imagem3.jpg" alt="deadpoll 3"class='flex-img'>
                 <p>
-                    <strong>jogos</strong>
+                    <strong>jogos.</strong>
                 </p>
                 <p>
                     <a href="detalhes.html" title="detalhes" class="btn">
-                        detalhes
+                        jogos agora
                     </a>
                 </p>
 
@@ -47,7 +47,7 @@
                 </p>
                 <p>
                     <a href="detalhes.html" title="detalhes" class="btn">
-                        detalhes
+                        jogue agora
                     </a>
                 </p>
 
