--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="flex-card">
                 <img src="imagens/imagem3.jpg" alt="deadpoll 3"class='flex-img'>
                 <p>
-                    <strong>jogos.</strong>
+                    <strong>jogos...</strong>
                 </p>
                 <p>
                     <a href="detalhes.html" title="detalhes" class="btn">
